[package]
name = "bench_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
aes-gcm = "0.10.1"
block-padding = "0.3.2"
cbc = "0.1.2"
dirs = "4.0.0"
libsqlite3-sys = "0.25.2"
pbkdf2 = { version = "0.11.0", features = ["sha1"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
strum = "0.24.1"
strum_macros = "0.24"
tempfile = "3.3.0"
time = "0.3.15"
walkdir = "2.3.2"

[target.'cfg(target_os="linux")'.dependencies]
secret-service = "2.0.2"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["dpapi"] }
