[package]
name = "bench_scraper"
version = "0.1.1"
edition = "2021"
authors = ["Glen Oakley <goakley123@gmail.com>"]
description = "A library for grabbing browser cookies from a filesystem"
documentation = "https://docs.rs/bench_scraper"
readme = "README.md"
repository = "https://github.com/goakley/bench_scraper/"
license = "MIT OR Apache-2.0"
keywords = ["browser", "firefox", "chrome", "chromium", "cookies"]
categories = ["filesystem", "network-programming", "web-programming"]

[lib]
name = "bench_scraper"
path = "src/lib.rs"

[dependencies]
aes = "0.8.2"
aes-gcm = "0.10.1"
block-padding = "0.3.2"
cbc = "0.1.2"
dirs = "4.0.0"
libsqlite3-sys = "0.25.2"
pbkdf2 = { version = "0.11.0", features = ["sha1"] }
reqwest = { version = "0.11.0", default-features = false, features = ["cookies"], optional = true }
rusqlite = { version = "0.28.0", features = ["bundled"] }
strum = "0.24.1"
strum_macros = "0.24"
tempfile = "3.3.0"
time = { version = "0.3.15", features = ["formatting"] }
walkdir = "2.3.2"

[dev-dependencies]
csv = "1.1.6"

[target.'cfg(target_os="linux")'.dependencies]
secret-service = "2.0.2"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["dpapi"] }

[features]
reqwest = ["dep:reqwest"]
